--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "bhumi itech server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --es-module-specifier-resolution=node index"
+    
   },
   "author": "bhumi itech",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.0",
