--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --es-module-specifier-resolution=node index"
+    "start": "node --es-module-specifier-resolution=node index",
+    "dev": "nodemon --es-module-specifier-resolution=node",
+    "format": "prettier --write \"**/*.(js)\"",
+    "deploy": "npm run format && git push && git push heroku master",
+    "start:pm2": "pm2 start index.js --node-args=\"--es-module-specifier-resolution=node\""
     
   },
   "author": "bhumi itech",
