signIn and singUp complete

--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "format": "prettier --write \"**/*.(js)\"",
     "deploy": "npm run format && git push && git push heroku master",
     "start:pm2": "pm2 start index.js --node-args=\"--es-module-specifier-resolution=node\""
-    
   },
   "author": "bhumi itech",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.0",
     "nodemon": "^2.0.12"
   }
