--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@sendgrid/mail": "^7.4.6",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
